dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.13)
AC_INIT(read.scm)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(cgen, 1.0)

AC_PROG_INSTALL
AC_EXEEXT

# Set target cpu.
arch=${target_cpu}
AC_SUBST(arch)

AM_MAINTAINER_MODE
AC_ARG_PROGRAM

AC_OUTPUT([Makefile doc/Makefile])
