dnl This file is used as input to autoconf to generate configure.
dnl The only reason we need this is that the Tcl directory structure
dnl changed in 7.5, and this change lets us avoid changing the
dnl configuration superstructure.
dnl Tom Tromey <tromey@cygnus.com>

AC_PREREQ(2.5)

AC_INIT(generic/tcl.h)

AC_CANONICAL_HOST

case "${host}" in
*cygwin* | *mingw32* | *windows32*)
	CONFIGDIR="win"
	AC_CONFIG_SUBDIRS("win")
	;;
*)
	CONFIGDIR="unix"
	AC_CONFIG_SUBDIRS("unix")
	AC_CONFIG_AUX_DIR("unix")	
	;;
esac

case "${host}" in
*cygwin*)
	CONFIGDIR2="cygwin"
	AC_SUBST(CONFIGDIR2)
	AC_CONFIG_SUBDIRS("cygwin")
esac

AC_SUBST(CONFIGDIR)
AC_PROG_MAKE_SET
AC_OUTPUT(Makefile)
